--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./target/site/allure-maven-plugin
-        publish_branch: gh_pages
+        publish_branch: gh-pages
         
     - name: Publish Allure Results
       uses: actions/upload-artifact@v3
