--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,14 +12,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Set up JDK 23
+
+    - name: Set up JDK 8
       uses: actions/setup-java@v4
       with:
-        java-version: '23'
+        java-version: '8'
         distribution: 'temurin'
         cache: maven
-      
+
     - name: Build and run tests
       run: mvn clean test
       continue-on-error: true
@@ -36,10 +36,10 @@ jobs:
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Использование GITHUB_TOKEN
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: target/allure-history
-        
+
     - name: Publish Allure Results
       uses: actions/upload-artifact@v3
       with:
