--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
             <version>2.29.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
