--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,18 +8,19 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-
+    
     - name: Set up JDK 8
       uses: actions/setup-java@v4
       with:
         java-version: '8'
         distribution: 'temurin'
         cache: maven
-
+      
     - name: Build and run tests
       run: mvn clean test
       continue-on-error: true
@@ -28,7 +29,7 @@ jobs:
       uses: simple-elf/allure-report-action@master
       id: allure-report
       with:
-        allure_results: target/allure-results 
+        allure_results: target/allure-results
         gh_pages: gh-pages
         allure_report: target/allure-report
         allure_history: target/allure-history
@@ -36,9 +37,9 @@ jobs:
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Использование GITHUB_TOKEN
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: target/allure-history
+        personal_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
+        publish_dir: target/allure-report
 
     - name: Publish Allure Results
       uses: actions/upload-artifact@v3
