--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
-                    <testFailureIgnore>false</testFailureIgnore> <!-- Гарантирует, что сборка не будет завершена успешно при ошибках тестов -->
+                    <testFailureIgnore>false</testFailureIgnore>
                 </configuration>
             </plugin>
 
